refactor: Position 위치 변경
- 기존 Unit 안에 있었으나 Janggi 내에서 관리하도록 수정
- 장애물 판단 책임 Route에 위임